# rp_pico_template

./: Cargo.toml  README.md
.cargo/: config.toml
