[package]
name = "rp_pico_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
rp2040-boot2 = "0.2.0"
rp2040-hal = "0.4.0"
cortex-m-rt = "0.7.1"
embedded-time = "0.12.1"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.2"
futures = { version = "0.3.21", default-features = false }
rp-pico = "0.3.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

[[bin]]
name = "led"
path = "src/led.rs"
